Миша прокуратуру вызывай, прокуратуру Миша!

--- a/Hospital/RegistrationWindow.xaml
+++ b/Hospital/RegistrationWindow.xaml
@@ -5,9 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Hospital"
         mc:Ignorable="d"
-        Title="Вход" Height="363" Width="1032" Foreground="White" Background="White" BorderBrush="#FF424242" OpacityMask="#FF424242" Grid.IsSharedSizeScope="True" ResizeMode="NoResize">
+        Title="Регистратура" Height="363" Width="1032" Foreground="White" Background="White" BorderBrush="#FF424242" OpacityMask="#FF424242" Grid.IsSharedSizeScope="True" ResizeMode="NoResize">
     <Grid Margin="0,0,0,-6">
-        <Button x:Name="LoInButton" Content="Зарегистрироваться" HorizontalAlignment="Left" Margin="519,283,0,0"  VerticalAlignment="Top" Height="38" Width="271" Click="Button_Click" Background="#FF424242" Foreground="White" FontSize="22"/>
+        <Button x:Name="LoInButton" Content="Зарегистрировать" HorizontalAlignment="Center" Margin="0,282,0,0"  VerticalAlignment="Top" Height="45" Width="272" Click="Button_Click" Background="#FF424242" Foreground="White" FontSize="22"/>
         <TextBox x:Name="NameBox" HorizontalAlignment="Left" Margin="10,85,0,0" TextWrapping="Wrap" Text="Имя" VerticalAlignment="Top" Width="280" Height="25" GotFocus="NameBox_GotFocus">
             <TextBox.Foreground>
                 <SolidColorBrush Color="Black" Opacity="0.5"/>
@@ -18,9 +18,7 @@
                 <SolidColorBrush Color="Black" Opacity="0.5"/>
             </TextBox.Foreground>
         </TextBox>
-        <Label Content="Регистрация" HorizontalAlignment="Center" Margin="0,20,0,0" VerticalAlignment="Top" FontSize="36"/>
-        <Label Content="Уже есть аккаунт?" HorizontalAlignment="Left" Margin="10,289,0,0" VerticalAlignment="Top"/>
-        <Button Content="Войти" HorizontalAlignment="Left" Margin="124,294,0,0" VerticalAlignment="Top" Height="18" Width="100" BorderBrush="#FF707070" Background="#FF424242" Foreground="White" FontSize="10" Click="Button_Click_1"/>
+        <Label Content="Регистратура" HorizontalAlignment="Center" Margin="0,20,0,0" VerticalAlignment="Top" FontSize="36"/>
         <TextBox x:Name="FatherNameBox" HorizontalAlignment="Left" Margin="10,172,0,0" TextWrapping="Wrap" Text="Отчество" VerticalAlignment="Top" Width="280" Height="25" GotFocus="FatherNameBox_GotFocus">
             <TextBox.Foreground>
                 <SolidColorBrush Color="Black" Opacity="0.5"/>
@@ -51,12 +49,12 @@
                 <SolidColorBrush Color="Black" Opacity="0.5"/>
             </TextBox.Foreground>
         </TextBox>
-        <TextBox x:Name="LoginBox" HorizontalAlignment="Left" Margin="631,172,0,0" TextWrapping="Wrap" Text="Логин" VerticalAlignment="Top" Width="280" Height="25" GotFocus="LoginBox_GotFocus">
+        <TextBox x:Name="WorkBox" HorizontalAlignment="Left" Margin="631,172,0,0" TextWrapping="Wrap" Text="Место работы" VerticalAlignment="Top" Width="280" Height="25" GotFocus="WorkBox_GotFocus">
             <TextBox.Foreground>
                 <SolidColorBrush Color="Black" Opacity="0.5"/>
             </TextBox.Foreground>
         </TextBox>
-        <TextBox x:Name="PassBox" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Пароль" VerticalAlignment="Top" Width="280" Height="25" GotFocus="PassBox_GotFocus" Margin="631,214,0,0">
+        <TextBox x:Name="StrahBox" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Страховая компания" VerticalAlignment="Top" Width="280" Height="25" GotFocus="StrahBox_GotFocus" Margin="631,214,0,0">
             <TextBox.Foreground>
                 <SolidColorBrush Color="Black" Opacity="0.5"/>
             </TextBox.Foreground>
@@ -79,6 +77,10 @@
             </TextBox.Foreground>
         </TextBox>
         <Label Content="рождения" HorizontalAlignment="Left" Margin="448,127,0,0" VerticalAlignment="Top" Height="25"/>
+        <Button Content="Присвоить идентичный код мед. карте" HorizontalAlignment="Left" Margin="10,300,0,0" VerticalAlignment="Top" Height="27" Width="228" BorderBrush="#FF707070" Foreground="White" Background="#FF424242"/>
+        <Button Content="Заполнить договор не мед. обслуживание" HorizontalAlignment="Left" Margin="784,268,0,0" VerticalAlignment="Top" Height="27" Background="#FF424242" Foreground="White"/>
+        <Button Content="Заполнить согласие на обработку персональных данных" HorizontalAlignment="Left" Margin="705,300,0,0" VerticalAlignment="Top" Height="27" Background="#FF424242" Foreground="White"/>
+        <Button Content="Записать пациента на прием к врачу" HorizontalAlignment="Left" Margin="10,268,0,0" VerticalAlignment="Top" Height="27" Width="228" BorderBrush="#FF707070" Foreground="White" Background="#FF424242"/>
 
     </Grid>
 </Window>
