--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -5,17 +5,22 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="MainWindow" Height="324" Width="375">
+    <Grid Margin="10,0,10,11">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="719*"/>
+            <ColumnDefinition Width="60*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="85*"/>
-            <RowDefinition Height="3*"/>
+            <RowDefinition Height="295*"/>
+            <RowDefinition Height="6*"/>
         </Grid.RowDefinitions>
-        <Button x:Name="LoInButton" Content="Войти" HorizontalAlignment="Center" Margin="0,209,0,0"  VerticalAlignment="Top" Height="50" Width="300"  Background="#FF424242" Foreground="White" FontSize="20" Click="Button_Click_1"/>
-        <TextBox x:Name="LoginBox" HorizontalAlignment="Center" TextWrapping="Wrap" Text="Логин" VerticalAlignment="Top" Width="280" Height="25" GotFocus="LoginBox_GotFocus" Margin="0,110,0,0"/>
-        <TextBox x:Name="PassBox" HorizontalAlignment="Center" TextWrapping="Wrap" Text="Пароль" VerticalAlignment="Top" Width="280" Height="25" GotFocus="PassBox_GotFocus" Margin="0,155,0,0">
+        <Button x:Name="LoInButton" Content="Войти" HorizontalAlignment="Left" Margin="24,209,0,0"  VerticalAlignment="Top" Height="50" Width="300"  Background="#FF424242" Foreground="White" FontSize="20" Click="Button_Click_1"/>
+        <TextBox x:Name="LoginBox" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Логин" VerticalAlignment="Top" Width="280" Height="25" GotFocus="LoginBox_GotFocus" Margin="34,110,0,0"/>
+        <TextBox x:Name="PassBox" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Пароль" VerticalAlignment="Top" Width="280" Height="25" GotFocus="PassBox_GotFocus" Margin="34,155,0,0">
         </TextBox>
-        <Label Content="Вход" HorizontalAlignment="Center" Margin="0,20,0,0" VerticalAlignment="Top" FontSize="36"/>
+        <Label Content="Вход" HorizontalAlignment="Left" Margin="133,32,0,0" VerticalAlignment="Top" FontSize="36" Height="58" Width="88"/>
 
     </Grid>
 </Window>
