--- a/WpfApp1/CrudService.xaml
+++ b/WpfApp1/CrudService.xaml
@@ -11,7 +11,7 @@
             <RowDefinition Height="51*"/>
             <RowDefinition Height="166*"/>
         </Grid.RowDefinitions>
-        <ComboBox SelectedItem="{Binding specialization}"  x:Name="ComboDoctors" DisplayMemberPath="Name" Grid.Row="1" HorizontalAlignment="Left" Margin="171,184,0,0" VerticalAlignment="Top" Width="619" Height="35"/>
+        <ComboBox SelectedItem="{Binding specialization}"  x:Name="ComboDoctors"  Grid.Row="1" HorizontalAlignment="Left" Margin="171,184,0,0" VerticalAlignment="Top" Width="619" Height="35" />
         <Label Content="Специализация" HorizontalAlignment="Left" Margin="10,184,0,0" VerticalAlignment="Top" FontSize="20" Grid.Row="1" Height="37" Width="153"/>
         <Label Content="Отчество" HorizontalAlignment="Left" Margin="11,0,0,0" VerticalAlignment="Center" FontSize="20" Grid.Row="1" Height="37" Width="95"/>
         <Label Content="Фамилия" HorizontalAlignment="Left" Margin="11,84,0,0" VerticalAlignment="Top" FontSize="20" Grid.Row="1" Height="37" Width="93"/>
@@ -20,7 +20,6 @@
         <TextBox Text="{Binding second_name}" HorizontalAlignment="Left" Height="37" Margin="171,84,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="619" Grid.Row="1"/>
         <TextBox Text="{Binding father_name}" HorizontalAlignment="Left" Height="37" Margin="171,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Width="619" Grid.Row="1"/>
         <Button x:Name="ButtonSave" Content="Сохранить" HorizontalAlignment="Center" Height="40" Margin="0,257,0,0" Grid.Row="1" VerticalAlignment="Top" Width="230" FontSize="22" Click="ButtonSave_Click"/>
-        <Grid Margin="0,102,0,92" Grid.RowSpan="2"/>
         <Grid Background="#FF424242">
             <Label x:Name="Header" Content="Редактор" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Height="66" Width="220" FontSize="48" Background="{x:Null}" OpacityMask="Black" Foreground="White"/>
             <Image HorizontalAlignment="Left" Height="91" VerticalAlignment="Top" Width="100" Source="/Resources/icon.png" Margin="10,10,0,0"/>
