--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -16,7 +16,7 @@
             <RowDefinition Height="295*"/>
             <RowDefinition Height="6*"/>
         </Grid.RowDefinitions>
-        <Button x:Name="LoInButton" Content="Войти" HorizontalAlignment="Left" Margin="24,209,0,0"  VerticalAlignment="Top" Height="50" Width="300"  Background="#FF424242" Foreground="White" FontSize="20" Click="Button_Click_1"/>
+        <Button x:Name="LoInButton" Content="Войти" HorizontalAlignment="Left" Margin="24,209,0,0"  VerticalAlignment="Top" Height="50" Width="300"  Background="#FF424242" Foreground="White" FontSize="20" Click="Button_Click"/>
         <TextBox x:Name="LoginBox" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Логин" VerticalAlignment="Top" Width="280" Height="25" GotFocus="LoginBox_GotFocus" Margin="34,110,0,0"/>
         <TextBox x:Name="PassBox" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Пароль" VerticalAlignment="Top" Width="280" Height="25" GotFocus="PassBox_GotFocus" Margin="34,155,0,0">
         </TextBox>
