--- a/WpfApp1/CrudService.xaml
+++ b/WpfApp1/CrudService.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="CrudService" Height="450" Width="800">
+        Title="CrudService" Height="450" Width="800" ResizeMode="NoResize">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="51*"/>
