--- a/WpfApp1/EditPatient.xaml
+++ b/WpfApp1/EditPatient.xaml
@@ -1,7 +1,7 @@
-﻿<Window x:Class="WpfApp1.SpecificPatientPage"
+﻿<Window x:Class="WpfApp1.EditPatient"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="SpecificPatientPage" Height="500" Width="620">
+        Title="EditPatient" Height="232" Width="620">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
@@ -59,12 +59,6 @@
             </DockPanel>
         </StackPanel>
 
-        <!-- Buttons -->
-        <StackPanel Grid.Row="1" Grid.ColumnSpan="3" HorizontalAlignment="Center" Margin="10,10,0,10">
-            <Button  Height="50"   Content="Заполнить договор на мед. обслуживание" Margin="10" Click="Button_Click"/>
-            <Button Height="50" Content="Заполнить договор на согласие на обработку перс. данных" Margin="10" Click="Button_Click_2"/>
-            <Button Height="50" Content="Записать на прием" Margin="10" Click="Button_Click_1"/>
-        </StackPanel>
         <Image Grid.Row="0" Grid.Column="1" Margin="10" Source="{Binding photo}" Width="200" Height="200"/>
 
     </Grid>
