--- a/WpfApp1/PatientPage.xaml
+++ b/WpfApp1/PatientPage.xaml
@@ -13,11 +13,11 @@
         </Grid.RowDefinitions>
         <WrapPanel Orientation="Horizontal" HorizontalAlignment="Center">
             <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Введите фамилию для поиска:" Width="175" TextAlignment="Right"></TextBlock>
+                <TextBlock Text="Введите фамилию для поиска:" Width="175" TextAlignment="Right" Margin="5"></TextBlock>
                 <TextBox Width="210" Name="TBoxSearch"></TextBox>
             </StackPanel>
             <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Введите номер карты:" Width="140" TextAlignment="Right"></TextBlock>
+                <TextBlock Text="Введите номер карты:" Width="140" TextAlignment="Right" Margin="5"></TextBlock>
                 <TextBox Width="210" Name="TBoxSearchSecond"></TextBox>
             </StackPanel>
             <StackPanel Orientation="Horizontal">
@@ -30,7 +30,12 @@
                     <WrapPanel Orientation="Horizontal" HorizontalAlignment="Center"></WrapPanel>
                 </ItemsPanelTemplate>
             </ListView.ItemsPanel>
-        <ListView.ItemTemplate>
+            <ListView.ItemContainerStyle>
+                <Style TargetType="ListViewItem">
+                    <EventSetter Event="MouseDoubleClick" Handler="Item_DoubleClick"/>
+                </Style>
+            </ListView.ItemContainerStyle>
+            <ListView.ItemTemplate>
                 <DataTemplate>
                     <Grid Margin="20" Width="400">
                         <Grid.RowDefinitions>
@@ -39,7 +44,7 @@
                             <RowDefinition Height="auto"></RowDefinition>
                             <RowDefinition Height="auto"></RowDefinition>
                         </Grid.RowDefinitions>
-                        <Image Width="auto" Grid.Row="1" Stretch="UniformToFill" HorizontalAlignment="Center" Margin="5" Source="{Binding photo}"></Image>
+                        <Image Width="auto" Grid.Row="1" Stretch="UniformToFill" HorizontalAlignment="Center" Margin="5" Source="{Binding photo, TargetNullValue='..\..\Resources\icon.png'}"></Image>
                         <TextBlock VerticalAlignment="Center" TextAlignment="Center" Width="390"
                             TextWrapping="Wrap" HorizontalAlignment="Center" Margin="5 5" FontSize="26" Grid.Row="0">
                             <TextBlock.Text>
@@ -50,6 +55,9 @@
                                 </MultiBinding>
                             </TextBlock.Text>
                         </TextBlock>
+                        <Button Background="Transparent" BorderBrush="Transparent" Grid.Row="3" Width="45" Height="20" Margin="20 0 0 0" Click="Button_Click_1">
+                            <Image Source="/Resources/edit.png"></Image>
+                        </Button>
                         <TextBlock Text="{Binding adress, StringFormat={}Адрес: {0}}" Grid.Row="2" Margin="5 5 5 15" HorizontalAlignment="Center" FontSize="15" FontWeight="Bold"></TextBlock>
                         <TextBlock Text="{Binding card_number, StringFormat={}Номер карты: {0}}" Grid.Row="3" FontSize="14" HorizontalAlignment="Right"></TextBlock>
                         <TextBlock Text="{Binding birthday, StringFormat={}Дата рождения: {0:dd.MM.yyyy}}" Grid.Row="4" FontSize="14" HorizontalAlignment="Left"></TextBlock>
