--- a/WpfApp1/RegistrationWindow.xaml
+++ b/WpfApp1/RegistrationWindow.xaml
@@ -11,7 +11,7 @@
             <ColumnDefinition Width="59*"/>
             <ColumnDefinition Width="857*"/>
         </Grid.ColumnDefinitions>
-        <Button x:Name="LoInButton" Content="Зарегистрировать" HorizontalAlignment="Left" Margin="572,268,0,0"  VerticalAlignment="Top" Height="46" Width="280" Click="Button_Click" FontSize="22" Grid.Column="1"/>
+        <Button x:Name="LoInButton" Content="Зарегистрировать" HorizontalAlignment="Left" Margin="257,268,0,0"  VerticalAlignment="Top" Height="46" Width="280" Click="Button_Click" FontSize="22" Grid.Column="1"/>
         <TextBox x:Name="NameBox" HorizontalAlignment="Left" Margin="10,85,0,0" TextWrapping="Wrap" Text="Имя" VerticalAlignment="Top" Width="280" Height="25" GotFocus="NameBox_GotFocus" Grid.ColumnSpan="2">
         </TextBox>
         <TextBox x:Name="SecondNameBox" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Фамилия" VerticalAlignment="Top" Width="280" Height="25" Margin="10,127,0,0" GotFocus="SecondNameBox_GotFocus" Grid.ColumnSpan="2">
@@ -36,7 +36,7 @@
         <DatePicker x:Name="birth"  HorizontalAlignment="Left" Margin="259,128,0,0" VerticalAlignment="Top" Width="174" DisplayDate="2000-01-01" Text="sdgdgfd" Grid.Column="1" />
         <Button Content="Пациенты" HorizontalAlignment="Left" Margin="11,268,0,0" VerticalAlignment="Top" Height="46" Width="228" BorderBrush="#FF707070" Foreground="White" Background="#FF424242" Grid.ColumnSpan="2" FontSize="22" Click="Button_Click_3"/>
         <Image HorizontalAlignment="Left" Height="40" Margin="11,30,0,0" VerticalAlignment="Top" Width="50" Source="/Resources/icon.png" Grid.ColumnSpan="2"/>
-        <Button Grid.Column="1" Content="Редактор БД" HorizontalAlignment="Left" Margin="779,48,0,0" VerticalAlignment="Top" Click="Button_Click_2"/>
+        <Button Grid.Column="1" Content="Врачи"  FontSize="22" Height="46" Width="280" HorizontalAlignment="Left" Margin="572,271,0,0" VerticalAlignment="Top" Click="Button_Click_2"/>
         <TextBox x:Name="PhotoPathBox" Grid.Column="1" HorizontalAlignment="Left" Margin="572,127,0,0" TextWrapping="Wrap" Text="Путь к фото" VerticalAlignment="Top" Width="252" Height="25" />
         <Button Grid.Column="1" Content="+" HorizontalAlignment="Left" Margin="829,128,0,0" VerticalAlignment="Top" Width="23" Height="22" Click="SelectPhotoButton_Click"/>
 
