--- a/WpfApp1/SpecificPatientPage.xaml
+++ b/WpfApp1/SpecificPatientPage.xaml
@@ -1,7 +1,8 @@
-﻿<Window x:Class="WpfApp1.SpecificPatientPage"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="SpecificPatientPage" Height="500" Width="620">
+        xmlns:av="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="av" x:Class="WpfApp1.SpecificPatientPage"
+        Title="SpecificPatientPage" Height="500" Width="874">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
@@ -10,6 +11,7 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="21.525"/>
             <ColumnDefinition Width="220"/>
+            <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
@@ -35,7 +37,7 @@
             </DockPanel>
             <DockPanel>
                 <TextBlock Text="Пол:" FontWeight="Bold" Margin="0,0,5,0"/>
-                <TextBlock Name="SexBlock"/>
+                <TextBlock x:Name="SexBlock"/>
             </DockPanel>
             <DockPanel>
                 <TextBlock Text="Адрес:" FontWeight="Bold" Margin="0,0,5,0"/>
@@ -61,11 +63,21 @@
 
         <!-- Buttons -->
         <StackPanel Grid.Row="1" Grid.ColumnSpan="3" HorizontalAlignment="Center" Margin="10,10,0,10">
-            <Button  Height="50"   Content="Заполнить договор на мед. обслуживание" Margin="10" Click="Button_Click"/>
-            <Button Height="50" Content="Заполнить договор на согласие на обработку перс. данных" Margin="10" Click="Button_Click_2"/>
+            <Button Height="50" Content="Заполнить договор на согласие на обработку перс. данных" Margin="10" Click="Button_Click"/>
             <Button Height="50" Content="Записать на прием" Margin="10" Click="Button_Click_1"/>
         </StackPanel>
         <Image Grid.Row="0" Grid.Column="1" Margin="10" Source="{Binding photo}" Width="200" Height="200"/>
-
+        <ListBox Grid.Row="0" Grid.Column="3" Name="allVisits" Margin="10" BorderThickness="1" BorderBrush="Black">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal" Margin="0 5">
+                        <TextBlock Text="{Binding Name}" Margin="5 0"/>
+                        <TextBlock Text="{Binding Date}"  Margin="5 0"/>
+                        <TextBlock Text="{Binding Status}" Margin="5 0"/>
+                    </StackPanel>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+        <Button Grid.Row="1" Grid.Column="3" Width="200" Height="50" VerticalAlignment="Top" Margin="0 30" Click="Button_Click_2">Сформировать отчет</Button>
     </Grid>
 </Window>
