--- a/WpfApp1/VisitService.xaml
+++ b/WpfApp1/VisitService.xaml
@@ -1,12 +1,37 @@
-﻿<Window x:Class="WpfApp1.VisitService"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
+        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit" x:Class="WpfApp1.VisitService"
         mc:Ignorable="d"
-        Title="VisitService" Height="450" Width="800">
+        Title="VisitService" Height="539" Width="800">
+ 
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="30*"></ColumnDefinition>
+            <ColumnDefinition Width="60*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <StackPanel HorizontalAlignment="Left" Margin="20" Grid.Column="0">
+            <local:Clock x:Name="clock" Width="200" Height="200"></local:Clock>
+            <DockPanel Margin="0 50 0 0" HorizontalAlignment="Center" Height="30">
+                <Label>Часы</Label>
+                <xctk:IntegerUpDown Value="{Binding Hours, ElementName=clock}" Width="50" Height="20" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                <Label Margin="10 0">Минуты</Label>      
+                <xctk:IntegerUpDown Value="{Binding Minutes, ElementName=clock}" Width="50" Height="20" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+            </DockPanel>
+            <DatePicker Margin="3 10"></DatePicker>
+
+            <DockPanel Width="200" Height="50" Margin="0 50">
+                <Label BorderBrush="Black" Name="Priem" Width="100" HorizontalAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="50" Background="Gray" MouseDown="Priem_MouseDown">Прием</Label>
+                <Label BorderBrush="Black" Name="Meropr" Width="100" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Лечебное&#x0A;Мероприятие" Height="50" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="Gray" MouseDown="Meropr_MouseDown"></Label>
+            </DockPanel>
+        </StackPanel>
+        <Frame Name="MainFrame" NavigationUIVisibility="Hidden" Grid.Column="1"></Frame>
+
+
+
     </Grid>
 </Window>
+ 
