--- a/WpfApp1/CrudService.xaml
+++ b/WpfApp1/CrudService.xaml
@@ -29,7 +29,7 @@
                 <ColumnDefinition Width="11*"/>
                 <ColumnDefinition Width="256*"/>
             </Grid.ColumnDefinitions>
-            <Label x:Name="Header" Content="Редактор" HorizontalAlignment="Left" Margin="258,10,0,0" VerticalAlignment="Top" Height="66" Width="220" FontSize="48" Background="{x:Null}" OpacityMask="Black" Foreground="White" Grid.Column="1"/>
+            <Label x:Name="Header" Content="Редактор" HorizontalAlignment="Left" Margin="258,0,0,0" VerticalAlignment="Center" Height="82" Width="220" FontSize="48" Background="{x:Null}" OpacityMask="Black" Foreground="White" Grid.Column="1"/>
             <Image HorizontalAlignment="Left" Height="91" VerticalAlignment="Top" Width="100" Source="/Resources/icon.png" Margin="10,10,0,0" Grid.ColumnSpan="2"/>
         </Grid>
         <Grid Grid.Row="1" Margin="0,315,0,0" Background="#FF424242" Grid.ColumnSpan="2"/>
