--- a/WpfApp1/EditPatient.xaml
+++ b/WpfApp1/EditPatient.xaml
@@ -1,65 +1,170 @@
 ﻿<Window x:Class="WpfApp1.EditPatient"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="EditPatient" Height="232" Width="620">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
+        Title="Редактировать пациента" Height="492" Width="620" ResizeMode="NoResize">
+    <Grid Margin="10">
+        <!-- Определение двух колонок: слева – фото, справа – данные пациента -->
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="21.525"/>
-            <ColumnDefinition Width="220"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <!-- основное содержимое -->
+            <RowDefinition Height="Auto" />
+            <!-- кнопки -->
+        </Grid.RowDefinitions>
 
-        <!-- Patient Photo -->
+        <!-- Левая колонка: Фото пациента и кнопка для изменения фото -->
+        <StackPanel Grid.Column="0" Grid.Row="0" Margin="10" HorizontalAlignment="Center">
+            <Border BorderBrush="Gray" BorderThickness="1">
+                <Image Source="{Binding photo}" Width="200" Height="200"/>
+            </Border>
+            <TextBox x:Name="PhotoPathBox" Text="{Binding photo, Mode=TwoWay}" Visibility="Visible" Margin="0 5"/>
+            <Button Content="Изменить фото" Margin="0,0,0,0" Click="SelectPhotoButton_Click"/>
 
-        <!-- Patient Details -->
-        <StackPanel Grid.Row="0" Grid.Column="2" Margin="10,10,10,10">
-            <DockPanel>
-                <TextBlock Text="Имя:" FontWeight="Bold" Margin="0,0,5,0"/>
-                <TextBlock Text="{Binding name}" />
-            </DockPanel>
-            <DockPanel>
-                <TextBlock Text="Фамилия:" FontWeight="Bold" Margin="0,0,5,0"/>
-                <TextBlock Text="{Binding second_name}" />
-            </DockPanel>
-            <DockPanel>
-                <TextBlock Text="Отчество:" FontWeight="Bold" Margin="0,0,5,0"/>
-                <TextBlock Text="{Binding father_name}" />
-            </DockPanel>
-            <DockPanel>
-                <TextBlock Text="Дата рождения:" FontWeight="Bold" Margin="0,0,5,0"/>
-                <TextBlock Text="{Binding birthday, StringFormat=dd.MM.yyyy}" />
-            </DockPanel>
-            <DockPanel>
-                <TextBlock Text="Пол:" FontWeight="Bold" Margin="0,0,5,0"/>
-                <TextBlock Name="SexBlock"/>
-            </DockPanel>
-            <DockPanel>
-                <TextBlock Text="Адрес:" FontWeight="Bold" Margin="0,0,5,0"/>
-                <TextBlock Text="{Binding adress}" />
-            </DockPanel>
-            <DockPanel>
-                <TextBlock Text="Телефон:" FontWeight="Bold" Margin="0,0,5,0"/>
-                <TextBlock Text="{Binding phone}" />
-            </DockPanel>
-            <DockPanel>
-                <TextBlock Text="Email:" FontWeight="Bold" Margin="0,0,5,0"/>
-                <TextBlock Text="{Binding email}" />
-            </DockPanel>
-            <DockPanel>
-                <TextBlock Text="Диагноз:" FontWeight="Bold" Margin="0,0,5,0"/>
-                <TextBlock Text="{Binding diagnosis}" />
-            </DockPanel>
-            <DockPanel>
-                <TextBlock Text="История болезни:" FontWeight="Bold" Margin="0,0,5,0"/>
-                <TextBlock Text="{Binding history}" />
-            </DockPanel>
         </StackPanel>
 
-        <Image Grid.Row="0" Grid.Column="1" Margin="10" Source="{Binding photo}" Width="200" Height="200"/>
+        <!-- Правая колонка: Редактируемые данные пациента -->
+        <ScrollViewer Grid.Column="1" Grid.Row="0" Margin="10" VerticalScrollBarVisibility="Auto">
+            <StackPanel>
+                <!-- Имя -->
+                <Grid Margin="0,5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="120"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Text="Имя:" FontWeight="Bold" VerticalAlignment="Center" Grid.Column="0"/>
+                    <TextBox x:Name="NameBox" Text="{Binding name, Mode=TwoWay}" Grid.Column="1" />
+                </Grid>
 
+                <!-- Фамилия -->
+                <Grid Margin="0,5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="120"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Text="Фамилия:" FontWeight="Bold" VerticalAlignment="Center" Grid.Column="0"/>
+                    <TextBox x:Name="SecondNameBox" Text="{Binding second_name, Mode=TwoWay}" Grid.Column="1" />
+                </Grid>
+
+                <!-- Отчество -->
+                <Grid Margin="0,5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="120"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Text="Отчество:" FontWeight="Bold" VerticalAlignment="Center" Grid.Column="0"/>
+                    <TextBox x:Name="FatherNameBox" Text="{Binding father_name, Mode=TwoWay}" Grid.Column="1" />
+                </Grid>
+
+                <!-- Паспорт -->
+                <Grid Margin="0,5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="120"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Text="Паспорт:" FontWeight="Bold" VerticalAlignment="Center" Grid.Column="0"/>
+                    <TextBox x:Name="PassportBox" Text="{Binding passport, Mode=TwoWay}" Grid.Column="1" />
+                </Grid>
+
+                <!-- Дата рождения -->
+                <Grid Margin="0,5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="120"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Text="Дата рождения:" FontWeight="Bold" VerticalAlignment="Center" Grid.Column="0"/>
+                    <DatePicker x:Name="birth" SelectedDate="{Binding birthday, Mode=TwoWay}" Grid.Column="1" />
+                </Grid>
+
+                <!-- Пол -->
+                <Grid Margin="0,5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="120"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Text="Пол:" FontWeight="Bold" VerticalAlignment="Center" Grid.Column="0"/>
+                    <StackPanel Grid.Column="1" Orientation="Horizontal">
+                        <CheckBox x:Name="Man" Content="Мужчина" Margin="0,0,20,0" Click="Man_Click"/>
+                        <CheckBox x:Name="Woman" Content="Женщина" Click="Woman_Click"/>
+                    </StackPanel>
+                </Grid>
+
+                <!-- Адрес -->
+                <Grid Margin="0,5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="120"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Text="Адрес:" FontWeight="Bold" VerticalAlignment="Center" Grid.Column="0"/>
+                    <TextBox x:Name="AdressBox" Text="{Binding adress, Mode=TwoWay}" Grid.Column="1" />
+                </Grid>
+
+                <!-- Телефон -->
+                <Grid Margin="0,5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="120"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Text="Телефон:" FontWeight="Bold" VerticalAlignment="Center" Grid.Column="0"/>
+                    <TextBox x:Name="PhoneBox" Text="{Binding phone, Mode=TwoWay}" Grid.Column="1" />
+                </Grid>
+
+                <!-- Email -->
+                <Grid Margin="0,5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="120"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Text="Email:" FontWeight="Bold" VerticalAlignment="Center" Grid.Column="0"/>
+                    <TextBox x:Name="EmailBox" Text="{Binding email, Mode=TwoWay}" Grid.Column="1" />
+                </Grid>
+
+                <!-- Логин -->
+                <Grid Margin="0,5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="120"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Text="Логин:" FontWeight="Bold" VerticalAlignment="Center" Grid.Column="0"/>
+                    <TextBox x:Name="LoginBox" Text="{Binding login, Mode=TwoWay}" Grid.Column="1" />
+                </Grid>
+
+                <!-- Пароль -->
+                <Grid Margin="0,5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="120"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Text="Пароль:" FontWeight="Bold" VerticalAlignment="Center" Grid.Column="0"/>
+                    <TextBox x:Name="PasswordBox" Text="{Binding password, Mode=TwoWay}" Grid.Column="1" />
+                </Grid>
+
+                <Grid Margin="0,5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="120"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Text="История:" FontWeight="Bold" VerticalAlignment="Center" Grid.Column="0"/>
+                    <TextBox x:Name="HistoryBox" Text="{Binding history, Mode=TwoWay}" Grid.Column="1" />
+                </Grid>
+                <Grid Margin="0,5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="120"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Text="Диагноз:" FontWeight="Bold" VerticalAlignment="Center" Grid.Column="0"/>
+                    <TextBox x:Name="DiagnosisBox" Text="{Binding diagnosis, Mode=TwoWay}" Grid.Column="1" />
+                </Grid>
+            </StackPanel>
+            
+        </ScrollViewer>
+
+        <!-- Кнопки сохранения/отмены -->
+        <StackPanel Grid.Row="1" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
+            <Button Content="Сохранить" Width="120" Height="40" Margin="5" Click="SaveButton_Click"/>
+            <Button Content="Отмена" Width="120" Height="40" Margin="5" Click="CancelButton_Click"/>
+        </StackPanel>
     </Grid>
 </Window>
