--- a/WpfApp1/SpecificPatientPage.xaml
+++ b/WpfApp1/SpecificPatientPage.xaml
@@ -32,6 +32,11 @@
                 <TextBlock Text="{Binding father_name}" />
             </DockPanel>
             <DockPanel>
+                <TextBlock Text="Паспорт:" FontWeight="Bold" Margin="0,0,5,0"/>
+                <TextBlock Text="{Binding passport}" />
+            </DockPanel>
+            
+            <DockPanel>
                 <TextBlock Text="Дата рождения:" FontWeight="Bold" Margin="0,0,5,0"/>
                 <TextBlock Text="{Binding birthday, StringFormat=dd.MM.yyyy}" />
             </DockPanel>
