--- a/WpfApp1/EditDoctor.xaml
+++ b/WpfApp1/EditDoctor.xaml
@@ -1,7 +1,11 @@
-﻿<Window x:Class="WpfApp1.EditPatient"
+﻿<Window x:Class="WpfApp1.EditDoctor"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Редактировать пациента" Height="517" Width="620" ResizeMode="NoResize">
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:WpfApp1"
+        mc:Ignorable="d"
+        Title="EditDoctor" Height="490" Width="652">
     <Grid Margin="10">
         <!-- Определение двух колонок: слева – фото, справа – данные пациента -->
         <Grid.ColumnDefinitions>
@@ -16,13 +20,22 @@
         </Grid.RowDefinitions>
 
         <!-- Левая колонка: Фото пациента и кнопка для изменения фото -->
-        <StackPanel Grid.Column="0" Grid.Row="0" Margin="10" HorizontalAlignment="Center">
+        <StackPanel Grid.Column="0" Grid.Row="0" Margin="10" HorizontalAlignment="Center" Grid.RowSpan="2">
             <Border BorderBrush="Gray" BorderThickness="1">
                 <Image Source="{Binding photo}" Width="200" Height="200"/>
             </Border>
             <TextBox x:Name="PhotoPathBox" Text="{Binding photo, Mode=TwoWay}" Visibility="Visible" Margin="0 5"/>
             <Button Content="Изменить фото" Margin="0,0,0,0" Click="SelectPhotoButton_Click"/>
+            <DataGrid Height="153" Margin="10">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Width="35" Header="">
 
+                    </DataGridTextColumn>
+                    <DataGridTextColumn Width="180" Header="Время работы">
+
+                    </DataGridTextColumn>
+                </DataGrid.Columns>
+            </DataGrid>
         </StackPanel>
 
         <!-- Правая колонка: Редактируемые данные пациента -->
@@ -111,15 +124,6 @@
                     <TextBox x:Name="PhoneBox" Text="{Binding phone, Mode=TwoWay}" Grid.Column="1" />
                 </Grid>
 
-                <!-- Email -->
-                <Grid Margin="0,5">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="120"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-                    <TextBlock Text="Email:" FontWeight="Bold" VerticalAlignment="Center" Grid.Column="0"/>
-                    <TextBox x:Name="EmailBox" Text="{Binding email, Mode=TwoWay}" Grid.Column="1" />
-                </Grid>
 
                 <!-- Логин -->
                 <Grid Margin="0,5">
@@ -146,19 +150,19 @@
                         <ColumnDefinition Width="120"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    <TextBlock Text="История:" FontWeight="Bold" VerticalAlignment="Center" Grid.Column="0"/>
-                    <TextBox x:Name="HistoryBox" Text="{Binding history, Mode=TwoWay}" Grid.Column="1" />
+                    <TextBlock Text="Специализация:" FontWeight="Bold" VerticalAlignment="Center" Grid.Column="0"/>
+                    <ComboBox x:Name="SpecBox" Text="{Binding specialization, Mode=TwoWay}" Grid.Column="1" />
                 </Grid>
                 <Grid Margin="0,5">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="120"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    <TextBlock Text="Диагноз:" FontWeight="Bold" VerticalAlignment="Center" Grid.Column="0"/>
-                    <TextBox x:Name="DiagnosisBox" Text="{Binding diagnosis, Mode=TwoWay}" Grid.Column="1" />
+                    <TextBlock Text="Пост:" FontWeight="Bold" VerticalAlignment="Center" Grid.Column="0"/>
+                    <TextBox x:Name="PostBox" Text="{Binding post, Mode=TwoWay}" Grid.Column="1" />
                 </Grid>
             </StackPanel>
-            
+
         </ScrollViewer>
 
         <!-- Кнопки сохранения/отмены -->
@@ -166,5 +170,6 @@
             <Button Content="Сохранить" Width="120" Height="40" Margin="5" Click="SaveButton_Click"/>
             <Button Content="Отмена" Width="120" Height="40" Margin="5" Click="CancelButton_Click"/>
         </StackPanel>
+
     </Grid>
 </Window>
