--- a/WpfApp1/Meropr.xaml
+++ b/WpfApp1/Meropr.xaml
@@ -5,10 +5,22 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:WpfApp1"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="Meropr">
+      d:DesignHeight="450"
+      Title="Meropr" Width="281">
 
     <Grid>
-        <Label>Мероприятие</Label>
+        <StackPanel>
+            <ListBox x:Name="doctorsAvailable" Height="200" Margin="10" Width="248"></ListBox>
+            <ComboBox Name="SpecCombo" Margin="10" Width="200" SelectionChanged="SpecCombo_SelectionChanged"/>
+            <DockPanel HorizontalAlignment="Right" Margin="0 0 42 0">
+                <Label Margin="0 0 73 0">Тип</Label>
+                <ComboBox Name="TypeCombo" Width="100" ></ComboBox>
+            </DockPanel>
+            <DockPanel Margin="0 5 42 0" HorizontalAlignment="Right" >
+                <Label Margin="0 0 40 0">Название</Label>
+                <TextBox Name="NameBox"  Width="100" ></TextBox>
+            </DockPanel>
+            <Button Margin="10" Width="100" Height="45" FontSize="20">Записать</Button>
+        </StackPanel>
     </Grid>
 </Page>
